--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,8 @@
   </ion-header>
   <ion-content>
     <h2>Connection status: {{status}}</h2>
-    <ion-item>
-      <ion-label>Value</ion-label>
-      <ion-input type="text" [(ngModel)]="value"></ion-input>
-    </ion-item>
-    <ion-button (click)="sendValue()">Send value</ion-button>
+    <h3>Heart rate: {{hr}}</h3>
+    <ion-button (click)="subscribe()">Subscribe</ion-button>
     <ion-button (click)="checkStatus()">Check status</ion-button>
   </ion-content>
 </ion-app>
